fix: Tweak news image css - Make sure it fills all whitespace even if it means its clipped

--- a/css/templatemo-nomad-force.css
+++ b/css/templatemo-nomad-force.css
@@ -653,8 +653,8 @@ strong {
 }
 
 .news-two-column .news-image {
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   object-fit: cover;
 }
 
